--- a/test/fixtures/photos.yml
+++ b/test/fixtures/photos.yml
@@ -3,7 +3,13 @@
 one:
   title: MyString
   content_type: MyString
+  body: MyText
+  likes: 1
+  user_id: 1
 
 two:
   title: MyString
   content_type: MyString
+  body: MyText
+  likes: 1
+  user_id: 1
